<resources>
    <string name="app_name">1001 lines</string>

    <string name="hello_world">Hello world!</string>

    <string name="Restart">Restart</string>
    <string name="Continue">Continue</string>
    <string name="Info">Info</string>
    <string name="BestScore">Collapse 1001 lines to win\nBest: %1$d</string>
    <string name="Share">Share on Facebook</string>
    <string name="Rate">Rate</string>
    <string name="NewRecord">New record</string>
    <string name="Settings">Rate</string>

    <string name="NumberStub">39286</string>

    <string name="ResetConfirmation">Start new game?</string>

    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="GameOver">Game over</string>
    <string name="WinCaption">You won the game!</string>
    <string name="WinText">You did it!</string>
    <string name="Score">Score</string>


    <string name="title_activity_exception_handle">ExceptionHandleActivity</string>
    <string name="ApplicationError">Sorry, application error occurred</string>
    <string name="ApplicationErrorExplanation">A technical error appeared during application run. Try to restart application. \n\nWe would be very grateful for you if you let us know about this problem so we can fix it.</string>
    <string name="ApplicationErrorSendInfo">send bug report</string>
    <string name="CloseApplication">Close application</string>
    <string name="title_activity_send_exception">SendExceptionActivity</string>

</resources>
